# algorithms

./: .gitignore  Makefile  configure.ac
c/src/: Makefile.am  btree.h  chess.h  demo_btree.c  demo_linux_list_simplify.c  linux-list.c  linux_list_simplify.h  list.c
java/: BinarySearch.java
js/: README.org
js/sorting/: bubble-sort.js  heap-sort.js  insertion-sort.js  quick-sort.js  shell-sort.js
src/: Makefile  Makefile.am  chess.c  chess.h  linux-list.c  linux-list.h  list.c  list.h  main.c
